[gd_scene load_steps=15 format=2]

[ext_resource path="res://HitBoxes/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/FireBoar.png" type="Texture" id=2]
[ext_resource path="res://HitBoxes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Enemies/FlamePig/FlamePig.gd" type="Script" id=4]
[ext_resource path="res://Enemies/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Effects/FlashWhite.shader" type="Shader" id=6]
[ext_resource path="res://Effects/BlinkAnimationPlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Enemies/FlamePig/PlayerCast.gd" type="Script" id=8]

[sub_resource type="ShaderMaterial" id=1]
resource_local_to_scene = true
shader = ExtResource( 6 )
shader_param/active = false

[sub_resource type="Animation" id=2]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5.96111, 6.1482 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 6.20398, 6.95958 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 5.9451, 5.8504 )

[node name="FlamePig" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 4
collision_mask = 2147483649
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 1 )
rotation = -1.5708
texture = ExtResource( 2 )
vframes = 3
hframes = 3
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/charge = SubResource( 2 )
anims/idle = SubResource( 3 )

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
visible = false
rotation = -1.5708
collision_layer = 2147483648
collision_mask = 8

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 4 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
visible = false
rotation = -1.5708
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 5 )

[node name="Stats" parent="." instance=ExtResource( 5 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 6 )

[node name="PlayerCast" type="RayCast2D" parent="."]
enabled = true
collision_mask = 11
script = ExtResource( 8 )

[node name="StateLabel" type="Label" parent="."]
margin_left = 0.0701561
margin_top = -14.4517
margin_right = 40.0702
margin_bottom = -0.4517
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlinkAnimationPlayer" parent="." instance=ExtResource( 7 )]

[node name="SeeLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AlignTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="AlignTimer" to="." method="_on_AlignTimer_timeout"]

[editable path="Hitbox"]

[editable path="Hurtbox"]
